@startuml

class Game {
    - playerA: Player
    - playerB: Player
    - board: Board
    - currentPlayer: Player
    - scanner: Scanner
    + run()
    + playTurn(int, int, int, int, int)
    + displayBoard()
    + checkVictory() : boolean
}

class Player {
    - name: String
    - workers: Worker[]
    + Player(String, int, int, int, int, Board)
    + getName() : String
    + getWorker(int) : Worker
    + takeTurn(int, int, int, int, int, Board) : boolean
}

class Worker {
    - x: int
    - y: int
    - owner: Player
    + Worker(Player, int, int)
    + getX() : int
    + getY() : int
    + getOwner() : Player
    + move(int, int, Board) : boolean
}

class Board {
    - grid: int[][]
    - workers: Worker[][]
    + Board()
    + isOccupied(int, int) : boolean
    + getTowerHeight(int, int) : int
    + build(int, int) : boolean
    + isValidMove(int, int, int, int) : boolean
    + placeWorker(int, int, Worker)
    + moveWorker(int, int, int, int)
}

Game "1" *-- "2" Player
Game "1" *-- "1" Board
Player "1" *-- "2" Worker
Worker "4" -- "1" Board

@enduml
